--- a/client/style.css
+++ b/client/style.css
@@ -54,7 +54,7 @@ table {
 /* 5x5 styles */
 
 body {
-  font-family: "Times New Roman", Times, serif;
+   font-family: Monaco, "DejaVu Sans Mono", "Lucida Console", monospace;
 }
 
 /* START:message */
@@ -62,31 +62,42 @@ body {
   position: relative;
   text-align: center;
   margin: 10px;
-  font-size: 24px;
+  font-size: 22px;
 }
 /* END:message */
 
-/* START:grid */
 #grid {
   position: relative;
   text-align: center;
-  width: 480px;
+  width: 576px; 
   margin: 16px auto;
   padding: 32px 0;
   border: 2px solid #555;
   font-size: 64px;
   font-family: Monaco, "DejaVu Sans Mono", "Lucida Console", monospace;
 }
-/* END:grid */
 
 /* START:gridUl */
+#grid.turnColorRed li:hover {
+   color: #000;
+   background: #d32;
+}
+
+#grid.turnColorGreen li:hover {
+   color: #000;
+   background: #ac1;
+}
+
+#grid.turnColorYellow li:hover {
+   color: #000;
+   background: FFFFB6;
+}
+
 #grid ul {
   list-style: none;
   line-height: 1.2;
 }
-/* END:gridUl
 
-/* START:gridLi */
 #grid li {
   display: inline;
   margin: 8px 4px;
@@ -95,21 +106,19 @@ body {
 }
 
 #grid li:hover {
-  color: #ccc;
-  background: #333;
+  color: #000;
+  background: #ac1;
 }
 
 #grid li.selected {
   color: #fff;
-  background: #000;
+  background: #ac1;
 }
-/* END:gridLi */
 
-/* START:notice */
 .notice, .error {
   position: relative;
   text-align: center;
-  width: 486px;
+  width: 576px;
   margin: 0 auto;
   padding: 16px 0;
   font-size: 18px;
@@ -117,13 +126,11 @@ body {
 .error {
   background: #d43;
 }
-/* END:notice */
 
-/* START:scores */
 #scores {
   position: relative;
   text-align: center;
-  width: 484px;
+  width: 576px;
   margin: 16px auto;
   font-size: 24px;
 }
@@ -131,11 +138,10 @@ body {
 	width:50%;
 }
 
-/* START:scores */
 #usedwords {
 	position: relative;
 	text-align: left;
-	width: 484px;
+	width: 576px;
 	margin: 16px auto;
 	background: #ccc;
 	font-size: 18px;
@@ -146,6 +152,7 @@ body {
 }
 
 #utitle {
+	padding: 10px;
 	text-align: center;
 }
 
