--- a/client/style.css
+++ b/client/style.css
@@ -1,14 +1,8 @@
 /* Meyer reset from http://meyerweb.com/eric/tools/css/reset/ (public domain) */
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -17,17 +11,20 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	vertical-align: baseline;
 	background: transparent;
 }
+
 body {
 	line-height: 1;
 }
+
 ol, ul {
 	list-style: none;
 }
+
 blockquote, q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+
+blockquote:before, blockquote:after, q:before, q:after {
 	content: '';
 	content: none;
 }
@@ -41,6 +38,7 @@ q:before, q:after {
 ins {
 	text-decoration: none;
 }
+
 del {
 	text-decoration: line-through;
 }
@@ -65,7 +63,6 @@ body {
 #grid {
   position: relative;
   text-align: center;
-  width: 100%; 
   margin: 0px 0px;
   padding: 12px 0px;
   border: 2px solid #555;
@@ -121,17 +118,6 @@ body {
 }
 .error {
   background: #d43;
-}
-
-#scores {
-  position: relative;
-  text-align: center;
-  width: 576px;
-  margin: 16px auto;
-  font-size: 24px;
-}
-#scores th.name {
-	width:50%;
 }
 
 #usedwords {
