--- a/client/style.css
+++ b/client/style.css
@@ -148,10 +148,11 @@ body {
 }
 
 #utitle {
-	padding: 4px;
+	padding: 5px;
+	margin: 5px 2px 2px 2px;
 	text-align: center;
 	font-weight: bold;
-	font-size: 18px;
+	font-size: 24px;
 }
 
 #usedwords {
@@ -159,7 +160,7 @@ body {
 	text-align: left;
 	margin: 8px auto;
 	background: #ccc;
-	font-size: 16px;
+	font-size: 18px;
 	padding: 12px;
 }
 
