--- a/client/style.css
+++ b/client/style.css
@@ -126,6 +126,16 @@ body {
 	font-size: 24px;
 }
 
+.moveList {
+	width: 60%;
+	position: relative;
+	text-align: left;
+	margin: 8px auto;
+	background: #ccc;
+	font-size: 16px;
+	padding: 12px;
+}
+
 .score {
 	padding: 5px 5px 0px 5px;
 	width: 90px;
@@ -136,11 +146,12 @@ body {
 }
 
 .notice, .error {
+	width: 60%;
 	position: relative;
 	text-align: center;
-	margin: 0 auto;
-	padding: 16px 0;
-	font-size: 18px;
+	margin: 8px auto;
+	padding: 12px;
+	font-size: 16px;
 }
 
 .error {
@@ -152,7 +163,7 @@ body {
 	margin: 5px 2px 2px 2px;
 	text-align: center;
 	font-weight: bold;
-	font-size: 24px;
+	font-size: 20px;
 }
 
 #usedwords {
@@ -160,7 +171,7 @@ body {
 	text-align: left;
 	margin: 8px auto;
 	background: #ccc;
-	font-size: 18px;
+	font-size: 16px;
 	padding: 12px;
 }
 
