--- a/client/lobbyStyle.css
+++ b/client/lobbyStyle.css
@@ -3,7 +3,6 @@
 	text-align: center;
 	margin: 0px 0px;
 	padding: 12px 0px;
-	border: 2px solid #555;
 	font-family: Monaco, "DejaVu Sans Mono", "Lucida Console", monospace;
 }
 
@@ -12,7 +11,6 @@
 	text-align: center;
 	margin: 0px 0px;
 	padding: 12px 0px;
-	border: 2px solid #CA5;
 	font-family: Monaco, "DejaVu Sans Mono", "Lucida Console", monospace;
 }
 
@@ -21,7 +19,6 @@
 	text-align: center;
 	margin: 0px 0px;
 	padding: 12px 0px;
-	border: 2px solid #1A5;
 	font-family: Monaco, "DejaVu Sans Mono", "Lucida Console", monospace;
 }
 
@@ -30,7 +27,19 @@
 	text-align: center;
 	margin: 0px 0px;
 	padding: 12px 0px;
-	border: 2px solid #FA5;
 	font-family: Monaco, "DejaVu Sans Mono", "Lucida Console", monospace;
+}
+
+#playerList {
+	width: 80%;
+	position: relative;
+	text-align: left;
+	margin: 8px auto;
+	background: #ddd;
+	font-size: 16px;
+	padding: 12px;
+	border-width: thin; 
+	border-color: black;	
+	border-style: outset;
 }
 
